# crawler_python

./: .coverage  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
crawler/: __init__.py  crawler.py
tests/: conftest.py  test_crawler.py  test_main.py
